# shcai-cli

./: README.md  setup.cfg  setup.py
.github/workflows/: ci-cd.yml
shcaicli/: api.py
tests/: cn_example.json  shcaicli_tests.py
